--- a/src/components/HomePage/Footer/Footer.css
+++ b/src/components/HomePage/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer-area{
-    /* background-image: url(../../../images/footer-bg.png); */
+    background-image: url(../../../images/cloud.png);
     background-size: cover;
 }
 
@@ -10,9 +10,7 @@
 .social-media .icon{
     height: 40px;
     width: 40px;
-    color: #1cc7c1;
     border-radius: 50%;
-    border: 1px solid #6ACECE;
     padding: 10px;
 }
 .social-media .active-icon{
