entering functionalities to work

--- a/src/components/HomePage/TrustedByClients/TrustedByClients.css
+++ b/src/components/HomePage/TrustedByClients/TrustedByClients.css
@@ -1,7 +1,7 @@
 .clientsTrusted {
     margin-top: 15px;
     content: ' ';
-    background: #0088FF;
+    background: white;
     opacity: 0.9;
     top: 0;
 }
