--- a/src/components/Dashboard/DashboardUser/BookingList/BookingList.css
+++ b/src/components/Dashboard/DashboardUser/BookingList/BookingList.css
@@ -1,8 +1,8 @@
-table.center {
+booking-table {
     margin-left:auto; 
     margin-right:auto;
   }
 
-.booking-data {
+/* .booking-data {
     margin-left: 150px;
-}
+} */
