--- a/src/components/HomePage/Services/ServiceDetail/ServiceDetail.css
+++ b/src/components/HomePage/Services/ServiceDetail/ServiceDetail.css
@@ -1,10 +1,4 @@
-.service-description {
-    height: 120px;
-}
 
-/* .myCard:hover {
-    padding-top: 15px;
-    background-image: linear-gradient(75deg, #0088ff, #005fb2);
-    color: #fff !important;
-    transition:  .1s  all ease-in-out !important;
-} */
+.my-footer{
+    border: none;
+}
